Update azure-pipelines.yml for Azure Pipelines

--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -9,14 +9,14 @@
  pool:
    vmImage: 'Ubuntu-16.04'
 
- steps:
-   - task: Maven@3
-     inputs:
-       mavenPomFile: 'pom.xml'
-       mavenOptions: '-Xmx3072m'
-       javaHomeOption: 'JDKVersion'
-       jdkVersionOption: '1.8'
-       jdkArchitectureOption: 'x64'
-       publishJUnitResults: false
-       testResultsFiles: '**/surefire-reports/TEST-*.xml'
-       goals: 'package'
+steps:
+
+# Create a variable
+- script: |
+    echo '##vso[task.setvariable variable=sauce]crushed tomatoes'
+
+# Use the variable
+# "$(sauce)" is replaced by the contents of the `sauce` variable by Azure Pipelines
+# before handing the body of the script to the shell.
+- script: |
+    echo my pipeline variable is $(sauce)
