--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -9,13 +9,15 @@
  pool:
    vmImage: 'Ubuntu-16.04'
 
+variables:
+  varJDKVersion: '1.8' 
  steps:
    - task: Maven@3
      inputs:
        mavenPomFile: 'pom.xml'
        mavenOptions: '-Xmx3072m'
        javaHomeOption: 'JDKVersion'
-       jdkVersionOption: '1.8'
+       jdkVersionOption: $(varJDKVersion)
        jdkArchitectureOption: 'x64'
        publishJUnitResults: false
        testResultsFiles: '**/surefire-reports/TEST-*.xml'
