Update azure-pipelines.yml for Azure Pipelines

--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -12,13 +12,5 @@
 variables:
   varJDKVersion: '1.8' 
  steps:
-   - task: Maven@3
-     inputs:
-       mavenPomFile: 'pom.xml'
-       mavenOptions: '-Xmx3072m'
-       javaHomeOption: 'JDKVersion'
-       jdkVersionOption: $(varJDKVersion)
-       jdkArchitectureOption: 'x64'
-       publishJUnitResults: false
-       testResultsFiles: '**/surefire-reports/TEST-*.xml'
-       goals: 'package'
+   - bash: echo $(varJDKVersion)
+
